# Pokemon-Battle-Sim

./: CMakeLists.txt  Makefile  README.md  main.hpp  pokemon.cpp  pokemon.hpp
data/: moves.txt  pokemon.txt  trainer1.txt  trainer2.txt
src/: GUI.cpp  battle.cpp  battle.hpp  def.cpp  main.cpp  main.hpp  move.cpp  move.hpp  pokemon.cpp  pokemon.hpp  trainer.cpp  trainer.hpp
